--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "google-auth-library": "^10.3.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
+    "multer-s3": "^3.0.1",
+    "nest-winston": "^1.10.2",
+    "nestjs-minio-client": "^2.2.0",
+    "uuid": "^11.1.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
